--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
 @import 'bootstrap';
 @import 'bootstrap-icons';
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
